[project]
name = "pubsub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.3",
    "pydantic-settings>=2.4.0",
    "pydio>=0.4.1",
    "temporalio>=1.18.2",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "TID"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["pubsub"]
